--- a/ordr_frontend/styles/globals.css
+++ b/ordr_frontend/styles/globals.css
@@ -32,6 +32,10 @@ a {
   text-decoration: none;
 }
 
+img {
+  pointer-events: none;
+}
+
 * {
   box-sizing: border-box;
 }
